k8s/email-worker/network-policy/deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: mail-worker
  labels:
    app.kubernetes.io/name: mail-worker
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mail-worker-egress
  namespace: mail-worker
  labels:
    app.kubernetes.io/name: mail-worker
spec:
  podSelector:
    matchLabels:
      app: mail-worker
  policyTypes:
    - Egress
  egress:
    - {} # Permite egress para acessar Redis e SMTP externos
